# Pouparmaisv2

./: App.tsx  audio-controls.tsx  base-layout.tsx  cookie-banner.tsx  gesture-container.tsx  goal-wizard.tsx  hardhat.config.ts  index.css  language-selector.tsx  main-layout.tsx  music-player.tsx  package-lock.json  package.json  premium-modal.tsx  pyproject.toml  replit.nix  savings-visualizer.tsx  terms-modal.tsx  theme.json  tutorial-modal.tsx  voice-command-overlay.tsx
